lots of changes

--- a/login.html
+++ b/login.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/basic.css" />
-    <script src="./scripts/getPosts.js" defer></script>
+    <link rel="stylesheet" href="../styles/common.css" />
   </head>
   <body>
     <div class="page-container">
-      <header class="page-header">MAIN</header>
+      <header class="page-header">LOGIN</header>
       <main></main>
       <footer class="page-footer"></footer>
     </div>
