--- a/old_files_not_in_use/index copy.html
+++ b/old_files_not_in_use/index copy.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/basic.css" />
-    <script src="./scripts/getPosts.js" defer></script>
+    <link rel="stylesheet" href="../styles/common.css" />
+    <script src="./scripts/homepage.js" defer></script>
   </head>
   <body>
     <div class="page-container">
