--- a/registerNew.html
+++ b/registerNew.html
@@ -4,18 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
-    <title>Form</title>
+    <link rel="stylesheet" href="styles/regForm.css" />
+    <title>Login form</title>
+    <script
+      src="https://kit.fontawesome.com/3834125a3f.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <form id="form">
-      <label for="name">Name</label>
-      <input name="username" type="text" />
-      <label for="name">E-mail</label>
-      <input name="e-mail" type="email" />
-      <label for="name">Password</label>
-      <input name="password" type="password" />
-      <button type="submit">Submit</button>
-    </form>
+    <div class="container">
+      <div class="form-box">
+        <h1 id="title">Sign Up</h1>
+        <form id="form">
+          <label class="label" for="name">Name</label>
+          <i class="fa-solid fa-user"></i>
+          <input id="name" name="name" type="text" placeholder="Name" />
+
+          <label class="label" for="email">E-mail</label>
+          <i class="fa-solid fa-envelope"></i>
+          <input id="email" name="email" type="email" placeholder="E-mail" />
+
+          <label class="label" for="password">Password</label>
+          <i class="fa-solid fa-lock"></i>
+          <input
+            id="password"
+            name="password"
+            type="password"
+            placeholder="Password"
+          />
+
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
 
     <script>
       const form = document.getElementById("form");
