register working - testing login

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/basic.css" />
+    <link rel="stylesheet" href="styles/regForm.css" />
     <script src="./scripts/getPosts.js" defer></script>
   </head>
   <body>
     <div class="page-container">
       <header class="page-header">MAIN</header>
-      <main></main>
+      <main>
+        <a href="register.html">Register</a>
+        <a href="log_in.html">Login</a>
+      </main>
       <footer class="page-footer"></footer>
     </div>
   </body>
