name change log_in.html to login.html

--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="form-box">
         <h1 id="title">Sign Up</h1>
-        <form id="form">
+        <form id="form" action="registerFinish.html">
           <label class="label" for="name">Name</label>
           <i class="fa-solid fa-user"></i>
           <input id="name" name="name" type="text" placeholder="Name" />
