--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header class="page-header">MAIN</header>
       <main>
         <a href="register.html">Register</a>
-        <a href="log_in.html">Login</a>
+        <a href="login.html">Login</a>
       </main>
       <footer class="page-footer"></footer>
     </div>
