--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="page-container">
       <header class="page-header">MAIN</header>
       <main>
-        <a href="register.html">Register</a>
-        <a href="login.html">Login</a>
+        <button><a href="register.html">Register</a></button>
+        <button><a href="login.html">Login</a></button>
       </main>
       <footer class="page-footer"></footer>
     </div>
