--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/regForm.css" />
+    <link rel="stylesheet" href="styles/start.css" />
     <script src="./scripts/getPosts.js" defer></script>
   </head>
   <body>
