--- a/login.html
+++ b/login.html
@@ -6,8 +6,11 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <link rel="stylesheet" href="styles/regForm.css" />
     <title>Login form</title>
-    <script src="https://kit.fontawesome.com/3834125a3f.js" crossorigin="anonymous"></script>
-    <script src="scripts/login1.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/3834125a3f.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="scripts/login.js" defer></script>
   </head>
   <body>
     <div class="container">
@@ -24,7 +27,12 @@
 
           <label class="label" for="password">Password</label>
           <i class="fa-solid fa-lock"></i>
-          <input id="password" name="password" type="password" placeholder="Password" />
+          <input
+            id="password"
+            name="password"
+            type="password"
+            placeholder="Password"
+          />
 
           <button type="submit">Submit</button>
         </form>
