--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <main>
         <a class="button" href="register.html">Register</a>
         <a class="button" href="login.html">Login</a>
+        <a class="button" href="login.html">Login</a>
       </main>
       <footer class="page-footer"></footer>
     </div>
