--- a/profile.html
+++ b/profile.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <title>Profile Page</title>
+    <script src="scripts/profile2.js"></script>
   </head>
   <body>
     <h1 class="header">Welcome to the Profile page</h1>
+    <div id="profile-info"></div>
   </body>
 </html>
