added name to local storage

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/3834125a3f.js"
       crossorigin="anonymous"
     ></script>
-    <script src="scripts/login.js" defer></script>
+    <script src="scripts/login2.js" defer></script>
   </head>
   <body>
     <div class="container">
