adding style to profile page and posts page

--- a/posts.html
+++ b/posts.html
@@ -6,15 +6,24 @@
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
     <title>Document</title>
     <link rel="stylesheet" href="styles/posts.css" />
+    <link rel="stylesheet" href="styles/nav.css" />
     <script src="./scripts/getPosts.js" defer></script>
   </head>
   <body>
-    <div class="page-container">
-      <header class="page-header">Posts</header>
-      <main>
-        <div class="container" id="cards-container"></div>
-      </main>
-      <footer class="page-footer"></footer>
+    <div class="navbar">
+      <a href="login.html">Home</a>
+      <a href="posts.html">Posts</a>
+    </div>
+    <div class="container">
+      <div class="content">
+        <div class="page-container">
+          <header class="page-header">Posts</header>
+          <main>
+            <div class="container" id="cards-container"></div>
+          </main>
+          <footer class="page-footer"></footer>
+        </div>
+      </div>
     </div>
   </body>
 </html>
