--- a/profile.html
+++ b/profile.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <link rel="stylesheet" href="styles/nav.css" />
+    <link rel="stylesheet" href="styles/posts.css" />
     <title>Profile Page</title>
-    <script src="scripts/profile2.js"></script>
+    <script src="scripts/profile4.js"></script>
   </head>
   <body>
-    <h1 class="header">Welcome to the Profile page</h1>
-    <div id="profile-info"></div>
+    <div class="navbar">
+      <a href="login.html">Home</a>
+      <a href="posts.html">Posts</a>
+    </div>
+    <div class="container">
+      <div class="page-container">
+        <header class="page-header">Welcome to your Profile page</header>
+        <main>
+          <div class="profile-container" id="cards-container">
+            <div id="profile-info"></div>
+          </div>
+        </main>
+      </div>
+    </div>
   </body>
 </html>
