--- a/posts.html
+++ b/posts.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/posts.css" />
     <link rel="stylesheet" href="styles/nav.css" />
-    <script src="./scripts/getPosts.js" defer></script>
+    <script src="./scripts/getPosts2.js" defer></script>
   </head>
   <body>
     <div class="navbar">
