--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <link rel="stylesheet" href="styles/nav.css" />
     <link rel="stylesheet" href="styles/posts.css" />
+    <link rel="stylesheet" href="styles/profile.css" />
     <title>Profile Page</title>
     <script src="scripts/profile4.js"></script>
   </head>
